--- a/views/list.erb
+++ b/views/list.erb
@@ -14,6 +14,9 @@
       <h3>
         <%= todo[:name] %>
       </h3>
+      <form action="/lists/<%= @list_id %>/todos/<%= index %>/delete" method="post" class="delete">
+        <button type="submit">Delete</button>
+      </form>
     </li>
   <% end %>
 </ul>
@@ -34,5 +37,5 @@
 </form>
 
 <% content_for :header_links do %>
-  <a href="/lists">All lists</a>
+  <a class="list" href="/lists">All lists</a>
 <% end %>
