--- a/views/lists.erb
+++ b/views/lists.erb
@@ -1,10 +1,10 @@
 <ul id="lists">
   <% @lists.each_with_index do |list, index| %>
-    <li>
+      <li class="<%= list_class(list) %>">
       <a href="/lists/<%= index %>">
         <h2>
           <%= list[:name] %>
-          <p><%= list[:todos].size %></p>
+          <p><%=items_remaining(list)%> / <%= total_items(list) %></p>
         </h2>
       </a>
     </li>
